gcc/testsuite/treelang/compile/mismatch.tree
// { dg-do compile }
static int bar ();
static void barf ();

bar {
	barf (1); // { dg-error "mismatch" "barf" }
	return -12;
}
